--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.32.0
+streamlit
 ultralytics
-langchain==0.1.12
-langchain-groq==0.1.0
-pillow==10.2.0
-opencv-python==4.9.0.80
-numpy==1.26.4 
+langchain
+langchain-groq
+pillow
+opencv-python
+numpy
